--- a/Pict/app/src/main/res/layout/activity_pembeli_profile.xml
+++ b/Pict/app/src/main/res/layout/activity_pembeli_profile.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="10dp">
 
         <EditText
-            android:id="@+id/pass_lama"
+            android:id="@+id/nama_pembeli"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginLeft="12dp"
@@ -52,7 +52,7 @@
             android:inputType="textPassword"
             android:textSize="14dp" />
         <EditText
-            android:id="@+id/pass_baru"
+            android:id="@+id/nomer_pembeli"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginLeft="12dp"
@@ -64,7 +64,7 @@
             android:inputType="textPassword"
             android:textSize="14dp" />
         <EditText
-            android:id="@+id/kon_passbaru"
+            android:id="@+id/alamat_pembeli"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginLeft="12dp"
