--- a/Pict/app/src/main/res/layout/fragment_pembeli_profile.xml
+++ b/Pict/app/src/main/res/layout/fragment_pembeli_profile.xml
@@ -30,6 +30,7 @@
         android:layout_marginHorizontal="10dp"
         app:cardElevation="4dp">
         <LinearLayout
+            android:id="@+id/btn_ubah_profil"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
