--- a/Pict/app/src/main/res/layout/activity_detail_produk.xml
+++ b/Pict/app/src/main/res/layout/activity_detail_produk.xml
@@ -57,6 +57,7 @@
                 android:textSize="24sp"/>
 
             <LinearLayout
+                android:id="@+id/toko"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="10dp"
