--- a/Pict/app/src/main/res/layout/activity_pembeli_main.xml
+++ b/Pict/app/src/main/res/layout/activity_pembeli_main.xml
@@ -8,7 +8,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/fl_container"
         android:layout_above="@id/nav_pembeli"
         app:layout_behavior='@string/appbar_scrolling_view_behavior'/>
