--- a/Pict/app/src/main/res/layout/activity_detail_produk.xml
+++ b/Pict/app/src/main/res/layout/activity_detail_produk.xml
@@ -35,7 +35,7 @@
             android:orientation="vertical">
             <ImageView
                 android:id="@+id/img_produk"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:src="@drawable/icon_store"
                 android:layout_gravity="center"
@@ -56,27 +56,35 @@
                 android:layout_marginHorizontal="15dp"
                 android:textSize="24sp"/>
 
-            <LinearLayout
-                android:id="@+id/toko"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="10dp"
-                android:layout_marginVertical="10dp"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/ic_profile"/>
-                <TextView
-                    android:id="@+id/tv_nama_toko"
+                android:layout_margin="7dp"
+                android:elevation="5dp"
+                app:cardCornerRadius="6dp">
+                <LinearLayout
+                    android:id="@+id/toko"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Jaya Karsa"
-                    android:textStyle="bold"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginHorizontal="15dp"
-                    android:textSize="20sp"/>
-            </LinearLayout>
+                    android:paddingHorizontal="10dp"
+                    android:layout_marginVertical="10dp"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_store"/>
+                    <TextView
+                        android:id="@+id/tv_nama_toko"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Jaya Karsa"
+                        android:textStyle="bold"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginHorizontal="15dp"
+                        android:textSize="20sp"/>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
