--- a/Pict/app/src/main/res/layout/fragment_pembeli_home.xml
+++ b/Pict/app/src/main/res/layout/fragment_pembeli_home.xml
@@ -15,6 +15,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/cv_seacrh"
             android:elevation="5sp"
             app:cardCornerRadius="5sp"
             android:layout_margin="10dp">
@@ -40,7 +41,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:src="@drawable/ic_splash_screen"/>
+            android:src="@drawable/ic_splash_screen"
+            android:layout_marginBottom="10dp"/>
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
