--- a/Pict/app/src/main/res/layout/fragment_pembeli_profile.xml
+++ b/Pict/app/src/main/res/layout/fragment_pembeli_profile.xml
@@ -102,7 +102,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:id="@+id/btn_informasi">
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="40dp"
